2012-11-12  Keishi Hattori  <keishi@webkit.org>

        Add support for week/month to Locale::formatDateTime()
        https://bugs.webkit.org/show_bug.cgi?id=101878

        Reviewed by Kent Tamura.

        Adding support for week/month to Locale::formatDateTime() in preparation for datalist support for <input type=week/month>.

        Added Chromium tests LocaleMacTest.formatWeek and LocaleMacTest.formatMonth.

        * platform/text/PlatformLocale.cpp:
        (WebCore::DateTimeStringBuilder::visitField):
        (WebCore::Locale::formatDateTime): Support week and month types.

2012-11-12  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt] Can not load MHTML documents
        https://bugs.webkit.org/show_bug.cgi?id=101765

        Reviewed by Simon Hausmann.

        Recognize common MHTML extensions so that we can recognize MHTML tests on the file-system.

        Tested by existing mhtml/ tests.

        * platform/qt/MIMETypeRegistryQt.cpp:
        (WebCore):

2012-11-12  Andreas Kling  <akling@apple.com>

        Tighten vector in ResourceRequestBase::setResponseContentDispositionEncodingFallbackArray().
        <http://webkit.org/b/101850>

        Reviewed by Antti Koivisto.

        Reserve the exact amount of space needed for m_responseContentDispositionEncodingFallbackArray.
        222kB progression on Membuster3.

        * platform/network/ResourceRequestBase.cpp:
        (WebCore::ResourceRequestBase::setResponseContentDispositionEncodingFallbackArray):

2012-11-12  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Schedule the RTCDataChannel events to be triggered at idle state
        https://bugs.webkit.org/show_bug.cgi?id=101751

        Reviewed by Adam Barth.

        This patch queues the events until the JS interpreter is in an idle state.

        Existing tests cover this patch.

        * Modules/mediastream/RTCDataChannel.cpp:
        (WebCore::RTCDataChannel::RTCDataChannel):